--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1561,7 +1561,7 @@ form {
 }
 .honors ul li {
 	float:left;
-	width:100%;
+	width:50%;
 	text-align:center;
 	list-style:none;
 	height:100px;
@@ -1575,6 +1575,15 @@ form {
 	max-width:100%;
 	max-height:100%;
 }
+
+.servingsince {
+    margin-top: -10px;
+    border: 1px solid black;
+    line-height: normal;
+    text-align: left;
+    padding: 3px;
+}
+
 .welcome {
 	margin-bottom:30px;
 }
