--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1582,6 +1582,7 @@ form {
     line-height: normal;
     text-align: left;
     padding: 3px;
+    background-color: #ffffff;
 }
 
 .welcome {
@@ -2058,4 +2059,7 @@ form {
 #main_advert .slide1 .cap-2 {
 	left:35px;
 	top:190px;
+}
+
+.anchor {
 }
