--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1566,10 +1566,10 @@ form {
 }
 .honors ul li {
 	float:left;
-	width:50%;
+	width:33%;
 	text-align:center;
 	list-style:none;
-	height:100px;
+	height:140px;
 	line-height:100px;
 }
 .honors ul li a {
@@ -1580,18 +1580,12 @@ form {
 	max-width:100%;
 	max-height:100%;
 }
-.honors ul li ul li {
-    float:left;
-    width:33%;
-    padding: 5px;
-}
 
 .servingsince {
-    margin-top: -10px;
-    border: 1px solid black;
+    border: 2px groove #eeeeee;
     line-height: normal;
     text-align: left;
-    padding: 3px;
+    padding: 6px;
     background-color: #ffffff;
 }
 
@@ -2049,7 +2043,7 @@ form {
 #main_advert .slide {
 	position:relative;
 	overflow:hidden;
-	height:363px;
+	height:380px;
 }
 #main_advert .slide img {
 	max-width:none;
