--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1584,7 +1584,8 @@ form {
 	max-width:100%;
 	max-height:100%;
     width: 228px;
-    padding: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .since {
