udpated profile image

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -295,7 +295,7 @@ a:hover {
 	line-height:30px;
 	color:#000;
 	font-weight:700;
-	background:url(../img/mcchiang.jpg) right center no-repeat;
+	background:url(../img/mcchiang2.jpg) right center no-repeat;
     white-space:normal;
 }
 .slide2 .cap-1 {
